--- a/src/components/atoms/Header/Cloud.css
+++ b/src/components/atoms/Header/Cloud.css
@@ -3,10 +3,12 @@
   width: 100%;
   pointer-events: none;
   overflow: hidden;
-  margin-top: 0;
+  margin: 0;
+  padding-top: -2px;
 }
 
 .cloud__svg {
+  margin-top: -1px;
   width: 120%;
   height: 100%;
   display: block;
