--- a/src/index.css
+++ b/src/index.css
@@ -68,12 +68,15 @@ html {
   min-height: 100vh;
   position: relative;
   font-size: 16px;
+  
 }
 
 body {
   margin: 0;
   min-height: 100vh;
   color: var(--color-text);
+  background-color: var(--color);
+  display: block;
 }
 
 #root {
